--- a/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -65,3 +65,4 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 ### Models
 
 - [`ClientInitializationOptions`](./data-types.md#Azure.ClientGenerator.Core.ClientInitializationOptions)
+- [`ClientOptions`](./data-types.md#Azure.ClientGenerator.Core.ClientOptions)
