--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -277,6 +277,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 ### Interfaces
 
 - [`LegacyOperations`](./interfaces.md#Azure.ResourceManager.Legacy.LegacyOperations)
+- [`Operations`](./interfaces.md#Azure.ResourceManager.Legacy.Operations)
 
 ### Operations
 
