Update docs, virtual resource detection, and rules

--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -30,6 +30,8 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 
 ## Azure
 
+## Azure.resourceManager
+
 ## Azure.ResourceManager
 
 ### Decorators
@@ -237,6 +239,45 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`TrackedResource`](./data-types.md#Azure.ResourceManager.CommonTypes.TrackedResource)
 - [`UserAssignedIdentities`](./data-types.md#Azure.ResourceManager.CommonTypes.UserAssignedIdentities)
 - [`UserAssignedIdentity`](./data-types.md#Azure.ResourceManager.CommonTypes.UserAssignedIdentity)
+
+## Azure.resourceManager.Extension
+
+## Azure.ResourceManager.Extension
+
+### Operations
+
+- [`ActionAsync`](./interfaces.md#Azure.ResourceManager.Extension.ActionAsync)
+- [`ActionAsyncBase`](./interfaces.md#Azure.ResourceManager.Extension.ActionAsyncBase)
+- [`ActionNoContentSync`](./interfaces.md#Azure.ResourceManager.Extension.ActionNoContentSync)
+- [`ActionNoResponseContentAsync`](./interfaces.md#Azure.ResourceManager.Extension.ActionNoResponseContentAsync)
+- [`ActionSync`](./interfaces.md#Azure.ResourceManager.Extension.ActionSync)
+- [`CheckExistence`](./interfaces.md#Azure.ResourceManager.Extension.CheckExistence)
+- [`CreateOrReplaceAsync`](./interfaces.md#Azure.ResourceManager.Extension.CreateOrReplaceAsync)
+- [`CreateOrReplaceSync`](./interfaces.md#Azure.ResourceManager.Extension.CreateOrReplaceSync)
+- [`CreateOrUpdateAsync`](./interfaces.md#Azure.ResourceManager.Extension.CreateOrUpdateAsync)
+- [`CustomPatchAsync`](./interfaces.md#Azure.ResourceManager.Extension.CustomPatchAsync)
+- [`CustomPatchSync`](./interfaces.md#Azure.ResourceManager.Extension.CustomPatchSync)
+- [`DeleteAsync`](./interfaces.md#Azure.ResourceManager.Extension.DeleteAsync)
+- [`DeleteAsyncBase`](./interfaces.md#Azure.ResourceManager.Extension.DeleteAsyncBase)
+- [`DeleteSync`](./interfaces.md#Azure.ResourceManager.Extension.DeleteSync)
+- [`DeleteWithoutOkAsync`](./interfaces.md#Azure.ResourceManager.Extension.DeleteWithoutOkAsync)
+- [`ListByTarget`](./interfaces.md#Azure.ResourceManager.Extension.ListByTarget)
+- [`Read`](./interfaces.md#Azure.ResourceManager.Extension.Read)
+
+### Models
+
+- [`ExtensionInstanceParameters`](./data-types.md#Azure.ResourceManager.Extension.ExtensionInstanceParameters)
+- [`ExtensionParentParameters`](./data-types.md#Azure.ResourceManager.Extension.ExtensionParentParameters)
+- [`ExtensionProviderNamespace`](./data-types.md#Azure.ResourceManager.Extension.ExtensionProviderNamespace)
+- [`ExternalResource`](./data-types.md#Azure.ResourceManager.Extension.ExternalResource)
+- [`ManagementGroup`](./data-types.md#Azure.ResourceManager.Extension.ManagementGroup)
+- [`ResourceGroup`](./data-types.md#Azure.ResourceManager.Extension.ResourceGroup)
+- [`ScopeParameter`](./data-types.md#Azure.ResourceManager.Extension.ScopeParameter)
+- [`Subscription`](./data-types.md#Azure.ResourceManager.Extension.Subscription)
+- [`TargetBaseParameters`](./data-types.md#Azure.ResourceManager.Extension.TargetBaseParameters)
+- [`TargetParameters`](./data-types.md#Azure.ResourceManager.Extension.TargetParameters)
+- [`TargetProviderNamespace`](./data-types.md#Azure.ResourceManager.Extension.TargetProviderNamespace)
+- [`Tenant`](./data-types.md#Azure.ResourceManager.Extension.Tenant)
 
 ## Azure.ResourceManager.Foundations
 
