Update templates, docs, and sample

--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -269,6 +269,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ExtensionInstanceParameters`](./data-types.md#Azure.ResourceManager.Extension.ExtensionInstanceParameters)
 - [`ExtensionParentParameters`](./data-types.md#Azure.ResourceManager.Extension.ExtensionParentParameters)
 - [`ExtensionProviderNamespace`](./data-types.md#Azure.ResourceManager.Extension.ExtensionProviderNamespace)
+- [`ExternalChildResource`](./data-types.md#Azure.ResourceManager.Extension.ExternalChildResource)
 - [`ExternalResource`](./data-types.md#Azure.ResourceManager.Extension.ExternalResource)
 - [`ManagementGroup`](./data-types.md#Azure.ResourceManager.Extension.ManagementGroup)
 - [`ResourceGroup`](./data-types.md#Azure.ResourceManager.Extension.ResourceGroup)
