Update provider name behavior to preserve existing spec output

--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -329,3 +329,4 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ManagedServiceIdentityV4`](./data-types.md#Azure.ResourceManager.Legacy.ManagedServiceIdentityV4)
 - [`ManagedServiceIdentityV4Property`](./data-types.md#Azure.ResourceManager.Legacy.ManagedServiceIdentityV4Property)
 - [`Provider`](./data-types.md#Azure.ResourceManager.Legacy.Provider)
+- [`ProviderParameter`](./data-types.md#Azure.ResourceManager.Legacy.ProviderParameter)
