fixed mockapi for user-defined error

--- a/.chronus/changes/HEAD-2025-5-25-19-48-8.md
+++ b/.chronus/changes/HEAD-2025-5-25-19-48-8.md
@@ -4,4 +4,5 @@ packages:
   - "@azure-tools/azure-http-specs"
 ---
 
-Fixed ARM large header action template.
+- Fixed ARM test template for large headers.
+- Fixed ARM mockapi for user-defined error case.
