--- a/.chronus/changes/toggle-auto-2025-5-2-17-5-1.md
+++ b/.chronus/changes/toggle-auto-2025-5-2-17-5-1.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/typespec-azure-resource-manager"
 ---
 
-Allow toggling @autoRoute in legacy operations
+Allow toggling `@autoRoute` in legacy operations
