Toggle '@autoRoute' in ARM operations (#2772)

--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -155,6 +155,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ResourceListCustomResult`](./data-types.md#Azure.ResourceManager.ResourceListCustomResult)
 - [`ResourceListResult`](./data-types.md#Azure.ResourceManager.ResourceListResult)
 - [`ResourceNameParameter`](./data-types.md#Azure.ResourceManager.ResourceNameParameter)
+- [`ResourceOperationOptions`](./data-types.md#Azure.ResourceManager.ResourceOperationOptions)
 - [`ResourceParentParameters`](./data-types.md#Azure.ResourceManager.ResourceParentParameters)
 - [`ResourcePlanProperty`](./data-types.md#Azure.ResourceManager.ResourcePlanProperty)
 - [`ResourceSkuProperty`](./data-types.md#Azure.ResourceManager.ResourceSkuProperty)
@@ -309,6 +310,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 
 ### Decorators
 
+- [`@armOperationRoute`](./decorators.md#@Azure.ResourceManager.Legacy.armOperationRoute)
 - [`@customAzureResource`](./decorators.md#@Azure.ResourceManager.Legacy.customAzureResource)
 - [`@externalTypeRef`](./decorators.md#@Azure.ResourceManager.Legacy.externalTypeRef)
 
@@ -317,6 +319,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ExtensionOperations`](./interfaces.md#Azure.ResourceManager.Legacy.ExtensionOperations)
 - [`LegacyOperations`](./interfaces.md#Azure.ResourceManager.Legacy.LegacyOperations)
 - [`Operations`](./interfaces.md#Azure.ResourceManager.Legacy.Operations)
+- [`RoutedOperations`](./interfaces.md#Azure.ResourceManager.Legacy.RoutedOperations)
 
 ### Operations
 
@@ -326,6 +329,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 
 ### Models
 
+- [`ArmOperationOptions`](./data-types.md#Azure.ResourceManager.Legacy.ArmOperationOptions)
 - [`ManagedServiceIdentityV4`](./data-types.md#Azure.ResourceManager.Legacy.ManagedServiceIdentityV4)
 - [`ManagedServiceIdentityV4Property`](./data-types.md#Azure.ResourceManager.Legacy.ManagedServiceIdentityV4Property)
 - [`Provider`](./data-types.md#Azure.ResourceManager.Legacy.Provider)
