--- a/website/src/content/docs/docs/howtos/Generate client libraries/03client.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/03client.mdx
@@ -79,6 +79,26 @@ client.pet();
 ```
 
 ```java
+// Client builder class
+package petstore;
+
+@ServiceClientBuilder(serviceClients = { PetStoreClient.class, PetStoreAsyncClient.class })
+public final class PetStoreClientBuilder implements HttpTrait<PetStoreClientBuilder>,
+    ConfigurationTrait<PetStoreClientBuilder>, EndpointTrait<PetStoreClientBuilder> {
+
+    public PetStoreClientBuilder();
+
+    public PetStoreClient buildClient();
+}
+
+// Client class
+@ServiceClient(builder = PetStoreClientBuilder.class)
+public final class PetStoreClient {
+    public void feed();
+    public void pet();
+}
+
+// Usage
 PetStoreClient client = new PetStoreClientBuilder().buildClient();
 client.feed();
 client.pet();
@@ -145,6 +165,33 @@ client.cats.pet();
 ```
 
 ```java
+// Client builder class
+package petstore;
+
+@ServiceClientBuilder(serviceClients = { PetStoreClient.class, PetStoreAsyncClient.class })
+public final class PetStoreClientBuilder implements HttpTrait<PetStoreClientBuilder>,
+    ConfigurationTrait<PetStoreClientBuilder>, EndpointTrait<PetStoreClientBuilder> {
+
+    public PetStoreClientBuilder();
+
+    public CatsClient buildCatsClient();
+    public DogsClient buildDogsClient();
+}
+
+// Client class
+@ServiceClient(builder = PetStoreClientBuilder.class)
+public final class DogsClient {
+    public void feed();
+    public void pet();
+}
+
+@ServiceClient(builder = PetStoreClientBuilder.class)
+public final class CatsClient {
+    public void feed();
+    public void pet();
+}
+
+// Usage
 PetStoreClientBuilder builder = new PetStoreClientBuilder();
 
 DogsClient dogsClient = builder.buildDogsClient();
@@ -233,6 +280,52 @@ client.actions.close();
 ```
 
 ```java
+// Client builder class
+package petstore;
+
+@ServiceClientBuilder(
+    serviceClients = { CatsClient.class, DogsClient.class, CatsAsyncClient.class, DogsAsyncClient.class })
+public final class PetStoreClientBuilder implements HttpTrait<PetStoreClientBuilder>,
+    ConfigurationTrait<PetStoreClientBuilder>, EndpointTrait<PetStoreClientBuilder> {
+
+    public PetStoreClientBuilder();
+
+    public PetStoreClient buildClient();
+    public PetsActionsClient buildPetsActionsClient();
+    public DogsClient buildPetsClient();
+    public BillingsClient buildBillingsClient();
+    public ActionsClient buildActionsClient();
+}
+
+// Client class
+@ServiceClient(builder = PetStoreClientBuilder.class)
+public final class PetStoreClient {
+    public void info();
+}
+
+@ServiceClient(builder = PetStoreClientBuilder.class)
+public final class BillingsClient {
+    public void history();
+}
+
+@ServiceClient(builder = PetStoreClientBuilder.class)
+public final class PetsClient {
+    public void info();
+}
+
+@ServiceClient(builder = PetStoreClientBuilder.class)
+public final class PetsActionsClient {
+    public void feed();
+    public void pet();
+}
+
+@ServiceClient(builder = PetStoreClientBuilder.class)
+public final class ActionsClient {
+    public void open();
+    public void close();
+}
+
+// Usage
 PetStoreClientBuilder builder = new PetStoreClientBuilder();
 
 PetStoreClient petStoreClient = builder.buildClient();
@@ -328,6 +421,26 @@ client.pet();
 ```
 
 ```java
+// Client builder class
+package petstore;
+
+@ServiceClientBuilder(serviceClients = { PetStoreClient.class, PetStoreAsyncClient.class })
+public final class PetStoreClientBuilder implements HttpTrait<PetStoreClientBuilder>,
+    ConfigurationTrait<PetStoreClientBuilder>, EndpointTrait<PetStoreClientBuilder> {
+
+    public PetStoreClientBuilder();
+
+    public PetStoreClient buildClient();
+}
+
+// Client class
+@ServiceClient(builder = PetStoreClientBuilder.class)
+public final class PetStoreClient {
+    public void feed();
+    public void pet();
+}
+
+// Usage
 PetStoreClient client = new PetStoreClientBuilder().buildClient();
 client.feed();
 client.pet();
@@ -345,9 +458,9 @@ This can be achieved with the augment decorator: `@clientName` from `typespec-cl
 @service
 namespace PetStore;
 
-@route("/feed") feed(): void;
+@route("/feed") op feed(): void;
 
-@route("/pet") pet(): void;
+@route("/pet") op pet(): void;
 ```
 
 ```typespec title="client.tsp"
@@ -384,6 +497,26 @@ client.pet();
 ```
 
 ```java
+// Client builder class
+package petstore;
+
+@ServiceClientBuilder(serviceClients = { PetStoreGreatClient.class, PetStoreGreatAsyncClient.class })
+public final class PetStoreGreatClientBuilder implements HttpTrait<PetStoreGreatClientBuilder>,
+    ConfigurationTrait<PetStoreGreatClientBuilder>, EndpointTrait<PetStoreGreatClientBuilder> {
+
+    public PetStoreGreatClientBuilder();
+
+    public PetStoreGreatClient buildClient();
+}
+
+// Client class
+@ServiceClient(builder = PetStoreGreatClientBuilder.class)
+public final class PetStoreGreatClient {
+    public void feed();
+    public void pet();
+}
+
+// Usage
 PetStoreGreatClient client = new PetStoreGreatClientBuilder().buildClient();
 client.feed();
 client.pet();
@@ -401,9 +534,9 @@ This can be achieved with the augment decorator: `@clientNamespace` from `typesp
 @service
 namespace PetStore;
 
-@route("/feed") feed(): void;
+@route("/feed") op feed(): void;
 
-@route("/pet") pet(): void;
+@route("/pet") op pet(): void;
 ```
 
 ```typespec title="client.tsp"
@@ -440,6 +573,26 @@ client.pet();
 ```
 
 ```java
+// Client builder class
+package petstorerenamed;
+
+@ServiceClientBuilder(serviceClients = { PetStoreClient.class, PetStoreAsyncClient.class })
+public final class PetStoreClientBuilder implements HttpTrait<PetStoreClientBuilder>,
+    ConfigurationTrait<PetStoreClientBuilder>, EndpointTrait<PetStoreClientBuilder> {
+
+    public PetStoreClientBuilder();
+
+    public PetStoreClient buildClient();
+}
+
+// Client class
+@ServiceClient(builder = PetStoreClientBuilder.class)
+public final class PetStoreClient {
+    public void feed();
+    public void pet();
+}
+
+// Usage
 package petstorerenamed;
 
 PetStoreClient client = new PetStoreClientBuilder().buildClient();
@@ -459,9 +612,9 @@ Two clients that separate the operations can be declared using the `@client` dec
 @service
 namespace PetStore;
 
-@route("/feed") feed(): void;
+@route("/feed") op feed(): void;
 
-@route("/pet") pet(): void;
+@route("/pet") op pet(): void;
 ```
 
 ```typespec
@@ -519,6 +672,39 @@ client2.feed();
 ```
 
 ```java
+// Client builder class
+package petstorerenamed;
+
+@ServiceClientBuilder(serviceClients = { FoodClient.class, FoodAsyncClient.class })
+public final class FoodClientBuilder
+    implements HttpTrait<FoodClientBuilder>, ConfigurationTrait<FoodClientBuilder>, EndpointTrait<FoodClientBuilder> {
+
+    public FoodClientBuilder();
+
+    public FoodClient buildClient();
+}
+
+@ServiceClientBuilder(serviceClients = { PetActionClient.class, PetActionAsyncClient.class })
+public final class PetActionClientBuilder implements HttpTrait<PetActionClientBuilder>,
+    ConfigurationTrait<PetActionClientBuilder>, EndpointTrait<PetActionClientBuilder> {
+
+    public PetActionClientBuilder();
+
+    public PetActionClient buildClient();
+}
+
+// Client class
+@ServiceClient(builder = FoodClientBuilder.class)
+public final class FoodClient {
+    public void feed();
+}
+
+@ServiceClient(builder = PetActionClientBuilder.class)
+public final class PetActionClient {
+    public void pet();
+}
+
+// Usage
 package petstorerenamed;
 
 FoodClient foodClient = new FoodClientBuilder().buildClient();
@@ -540,9 +726,9 @@ Two clients that separate the operations can be declared using the `@client` dec
 @service
 namespace PetStore;
 
-@route("/feed") feed(): void;
+@route("/feed") op feed(): void;
 
-@route("/pet") pet(): void;
+@route("/pet") op pet(): void;
 ```
 
 ```typespec title="client.tsp"
@@ -595,6 +781,31 @@ client.opGrp2.pet();
 ```
 
 ```java
+// Client builder class
+package petstorerenamed;
+
+@ServiceClientBuilder(
+    serviceClients = { OpGrp1Client.class, OpGrp2Client.class, OpGrp1AsyncClient.class, OpGrp2AsyncClient.class })
+public final class PetStoreClientBuilder implements HttpTrait<PetStoreClientBuilder>,
+    ConfigurationTrait<PetStoreClientBuilder>, EndpointTrait<PetStoreClientBuilder> {
+
+    public OpGrp1Client buildOpGrp1Client();
+
+    public OpGrp2Client buildOpGrp2Client();
+}
+
+// Client class
+@ServiceClient(builder = PetStoreClientBuilder.class)
+public final class OpGrp1Client {
+    public void feed();
+}
+
+@ServiceClient(builder = PetStoreClientBuilder.class)
+public final class OpGrp2Client {
+    public void pet();
+}
+
+// Usage
 package petstorerenamed;
 
 PetStoreClientBuilder builder = new PetStoreClientBuilder();
@@ -616,9 +827,9 @@ opGrp2Client.pet();
 @service
 namespace PetStore;
 
-@route("/feed") feed(): void;
+@route("/feed") op feed(): void;
 
-@route("/pet") pet(): void;
+@route("/pet") op pet(): void;
 ```
 
 ```typespec title="client.tsp"
@@ -666,6 +877,43 @@ NOT_SUPPORTED;
 ```
 
 ```java
+package newstore.food;
+
+// Client builder class
+@ServiceClientBuilder(serviceClients = { FoodClient.class, FoodAsyncClient.class })
+public final class FoodClientBuilder
+    implements HttpTrait<FoodClientBuilder>, ConfigurationTrait<FoodClientBuilder>, EndpointTrait<FoodClientBuilder> {
+
+    public FoodClientBuilder();
+
+    public FoodClient buildClient();
+}
+
+// Client class
+@ServiceClient(builder = FoodClientBuilder.class)
+public final class FoodClient {
+    public void feed();
+}
+
+package newstore.petaction;
+
+// Client builder class
+@ServiceClientBuilder(serviceClients = { PetActionClient.class, PetActionAsyncClient.class })
+public final class PetActionClientBuilder implements HttpTrait<PetActionClientBuilder>,
+    ConfigurationTrait<PetActionClientBuilder>, EndpointTrait<PetActionClientBuilder> {
+
+    public PetActionClientBuilder();
+
+    public PetActionClient buildClient();
+}
+
+// Client class
+@ServiceClient(builder = PetActionClientBuilder.class)
+public final class PetActionClient {
+    public void pet();
+}
+
+// Usage
 import newpetstore.food.FoodClient;
 import newpetstore.food.FoodClientBuilder;
 import newpetstore.petaction.PetActionClient;
@@ -690,9 +938,9 @@ Two clients that separate the operations can be declared using the `client` deco
 @service
 namespace PetStore;
 
-@route("/feed") feed(): void;
+@route("/feed") op feed(): void;
 
-@route("/pet") pet(): void;
+@route("/pet") op pet(): void;
 ```
 
 ```typespec title="client.tsp"
@@ -748,6 +996,43 @@ NOT_SUPPORTED;
 ```
 
 ```java
+package petstorerenamed;
+
+// Client builder class
+@ServiceClientBuilder(serviceClients = { FoodClient.class, FoodAsyncClient.class })
+public final class FoodClientBuilder
+    implements HttpTrait<FoodClientBuilder>, ConfigurationTrait<FoodClientBuilder>, EndpointTrait<FoodClientBuilder> {
+
+    public FoodClientBuilder();
+
+    public FoodClient buildClient();
+}
+
+// Client class
+@ServiceClient(builder = FoodClientBuilder.class)
+public final class FoodClient {
+    public void feed();
+}
+
+package petstorerenamed.subnamespace;
+
+// Client builder class
+@ServiceClientBuilder(serviceClients = { PetActionClient.class, PetActionAsyncClient.class })
+public final class PetActionClientBuilder implements HttpTrait<PetActionClientBuilder>,
+    ConfigurationTrait<PetActionClientBuilder>, EndpointTrait<PetActionClientBuilder> {
+
+    public PetActionClientBuilder();
+
+    public PetActionClient buildClient();
+}
+
+// Client class
+@ServiceClient(builder = PetActionClientBuilder.class)
+public final class PetActionClient {
+    public void pet();
+}
+
+// Usage
 import petstorerenamed.FoodClient;
 import petstorerenamed.FoodClientBuilder;
 import petstorerenamed.subnamespace.PetActionClient;
@@ -778,8 +1063,8 @@ The generated code will automatically pass in the inputted value from the client
 @service
 namespace Storage;
 
-op upload(@path blobName: string): void;
-op download(@path blobName: string): void;
+@route("/upload") op upload(@path blobName: string): void;
+@route("/download") op download(@path blobName: string): void;
 ```
 
 ```typespec title="client.tsp"
@@ -831,6 +1116,28 @@ client.download();
 ```
 
 ```java
+// Client builder class
+package storage;
+
+@ServiceClientBuilder(serviceClients = { StorageClient.class, StorageAsyncClient.class })
+public final class StorageClientBuilder implements HttpTrait<StorageClientBuilder>,
+    ConfigurationTrait<StorageClientBuilder>, EndpointTrait<StorageClientBuilder> {
+
+    public StorageClientBuilder();
+
+    public StorageClientBuilder blobName(String blobName);
+
+    public StorageClient buildClient();
+}
+
+// Client class
+@ServiceClient(builder = StorageClientBuilder.class)
+public final class StorageClient {
+    public void upload();
+    public void download();
+}
+
+// Usage
 package storage;
 
 StorageClient client = new StorageClient()
@@ -852,8 +1159,8 @@ If you want to rename the parameter name that you elevate to the client level, y
 @service
 namespace Storage;
 
-op upload(@path blobName: string): void;
-op download(@path blobName: string): void;
+@route("/upload") op upload(@path blobName: string): void;
+@route("/download") op download(@path blobName: string): void;
 ```
 
 ```typespec title="client.tsp"
@@ -906,6 +1213,28 @@ client.download();
 ```
 
 ```java
+// Client builder class
+package storage;
+
+@ServiceClientBuilder(serviceClients = { StorageClient.class, StorageAsyncClient.class })
+public final class StorageClientBuilder implements HttpTrait<StorageClientBuilder>,
+    ConfigurationTrait<StorageClientBuilder>, EndpointTrait<StorageClientBuilder> {
+
+    public StorageClientBuilder();
+
+    public StorageClientBuilder blob(String blob);
+
+    public StorageClient buildClient();
+}
+
+// Client class
+@ServiceClient(builder = StorageClientBuilder.class)
+public final class StorageClient {
+    public void upload();
+    public void download();
+}
+
+// Usage
 package storage;
 
 StorageClient client = new StorageClient()
