--- a/website/src/content/docs/docs/libraries/azure-core/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-core/reference/index.mdx
@@ -50,6 +50,7 @@ npm install --save-peer @azure-tools/typespec-azure-core
 - [`@pollingLocation`](./decorators.md#@Azure.Core.pollingLocation)
 - [`@pollingOperation`](./decorators.md#@Azure.Core.pollingOperation)
 - [`@pollingOperationParameter`](./decorators.md#@Azure.Core.pollingOperationParameter)
+- [`@previewVersion`](./decorators.md#@Azure.Core.previewVersion)
 - [`@useFinalStateVia`](./decorators.md#@Azure.Core.useFinalStateVia)
 
 ### Interfaces
